<resources>
    <string name="app_name">Coin dispenser</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="coin_dispenser_title">Coin Dispenser</string>
    <string name="enter_username_and_password">Please enter your username and password below:</string>
    <string name="login_button_text">Login</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="submit_button_text">Submit</string>
    <string name="close_button_text">Close</string>

    <string name="outstanding_amount_text">Please pay:</string>
    <string name="payment_capture_text">Please enter an amount:</string>
    <string name="title_activity_coin_dispenser_payment_capture">Payment Capture</string>
    <string name="title_activity_coin_dispenser_denominations_calculation">Denominations:</string>


</resources>
